# mpdsonic

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: api.rs  app.rs  library.rs  listenbrainz.rs  main.rs  mpd.rs
src/api/: annotation.rs  browsing.rs  common.rs  error.rs  glue.rs  playlists.rs  retrieval.rs  scanning.rs  system.rs  types.rs  users.rs
