[package]
name = "mpdsonic"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
base64 = "0.13"
bytes = "1.2"
chrono = "0.4"
clap = { version = "3.2", features = ["cargo", "env", "derive"] }
rust-crypto = "0.2"
futures = "0.3"
hex = "0.4"
http = "0.2"
itertools = "0.10"
md5 = "0.7"
mime = "0.3"
mpd_client = { version = "1.0", features = ["chrono"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.3", features = ["cors"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.3"
xml-rs = "0.8"
yaserde = "0.8"
yaserde_derive = "0.8"
