[package]
name = "mpdsonic"
version = "0.4.1"
edition = "2021"

[dependencies]
axum = "0.6"
base64 = "0.21"
bb8 = "0.8.0"
bytes = "1.4"
clap = { version = "4.3", features = ["cargo", "env", "derive"] }
constant_time_eq = "0.3"
futures = "0.3"
hex = "0.4"
http = "0.2"
itertools = "0.11"
md5 = "0.7"
mime = "0.3"
mpd_client = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_urlencoded = "0.7"
time = { version = "0", features = ["formatting", "std", "macros", "parsing"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.4", features = ["cors"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.3"
xml-rs = "0.8"
yaserde = "0.8"
yaserde_derive = "0.8"
